--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gis-wise-2020-2021",
+  "name": "GIS-WiSe-2020-2021",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
